plugins {
    id("com.android.library")
    id("kotlin-android")
    id("kotlinx-serialization")
}

//recyclerview 1.4.0-rc01
//viewpager 1.1.0

android {
    namespace "androidx.recyclerview"
    compileSdk = appCompileSDK
    buildToolsVersion = appBuildTools

    defaultConfig {
        minSdk = appMinSDK
        targetSdk = appTargetSDK
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
        encoding = "utf-8"
    }
    kotlinOptions {
        jvmTarget = "21"
    }
    sourceSets {
        main.res.srcDirs "res", "res-public"
    }
}

dependencies {
    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
    implementation("org.jetbrains.kotlin:kotlin-parcelize-runtime:$kotlin_version")
    implementation("org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version")
    compileOnly("org.jetbrains.kotlin:kotlin-annotations-jvm:$kotlin_version")
    implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlin_serializer")
    implementation("androidx.annotation:annotation:$annotationVersion")
    implementation("androidx.appcompat:appcompat:$appcompatVersion")
    implementation("androidx.core:core-ktx:$coreVersion")
    implementation("androidx.customview:customview:$customviewVersion")
    implementation("androidx.customview:customview-poolingcontainer:$customviewPoolingcontainerVersion")
    implementation("androidx.activity:activity-ktx:$activityVersion")
    implementation("androidx.fragment:fragment-ktx:$fragmentVersion")
    implementation("androidx.collection:collection-ktx:$collectionVersion")
    implementation("androidx.tracing:tracing-ktx:$tracingVersion")
}
